# gce_metadata_server

./: .goreleaser.yml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  TODO.md  WORKSPACE  config.json  gce_metadata_server.py  gcloud_wrapper.py  go.mod  go.sum  main.go  repositories.bzl  requirements.txt  server.go  server_test.go
.github/workflows/: build.yaml  release.yaml  test.yaml
certs/: BUILD.bazel  client.crt  client.key  root.crt  server.crt  server.key
cmd/: BUILD.bazel  main.go
dockerimages/metadatadns/: Dockerfile  google.internal.db  named.conf.local  named.conf.options  supervisord.conf
dockerimages/metadataserver/: Dockerfile
dockerimages/myapp/: Dockerfile  main.py  my-rs.yaml  my-srv.yaml
examples/container/: Dockerfile  go.mod  go.sum
examples/dotnet/: GCEAuth.cs  gcp.csproj
examples/envoy_gcp_authentication/: sidecar.yaml
examples/goapp/: go.mod  go.sum  main.go
examples/goapp_mtls/: go.mod  go.sum  main.go
examples/goapp_mtls/mtlstokensource/: go.mod  go.sum  token.go
examples/goapp_unix/: go.mod  go.sum  main.go
examples/javaapp/: pom.xml
examples/javaapp/src/main/java/com/test/: TestApp.java
examples/kubernetes/: app.yaml  metadata.yaml
examples/kubernetes/app/: go.mod  go.sum  main.go
examples/nodeapp/: app.js  package.json
examples/pyapp/: main.py
