module(
    name = "com_github_salrashid123_gce_metadata_server",
    version = "3.94.0",
)

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.10")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_foxboron_go_tpm_keyfiles",
    "com_github_fsnotify_fsnotify",
    "com_github_golang_glog",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_go_tpm",
    "com_github_gorilla_mux",
    "com_github_prometheus_client_golang",
    "com_github_salrashid123_golang_jwt_tpm",
    "com_github_salrashid123_oauth2_v3",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_iam",
    "org_golang_google_api",
    "org_golang_x_oauth2",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:74ddbf52d93fafbdd21b399271b0b4aac1babf8fa98cab59e5692e01169a1348",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base")
